add object attribute timeline
